--- a/src/components/LetterboxedSolverPage.css
+++ b/src/components/LetterboxedSolverPage.css
@@ -17,16 +17,23 @@ h1 {
 /* Button Styles */
 .btn-primary {
     background-color: var(--primary);
+    border: 2px solid var(--primary);
     border: none;
-    color: #fff;
+    color: var(--secondary);
     padding: 10px 20px;
     border-radius: 4px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    font-size: 1rem;
+    font-weight: bold;
 }
 
 .btn-primary:hover {
     background-color: var(--accent);
+    border-color: var(--accent);
+    color: var(--secondary);
+
+    transform: scale(1.05);
 }
 
 /* Puzzle Input */
@@ -36,42 +43,36 @@ h1 {
     align-items: center;
 }
 
-.puzzle-input-and-button-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
-}
 
-.puzzle-rows-container {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(4, 1fr);
-    max-width: 600px;;
-}
-
-.puzzle-row {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-}
-
-.input-row {
-    display: flex;
-    gap:10px;
-}
 
 .puzzle-input {
     width: 40px;
     height: 40px;
     text-align: center;
     font-size: 1.5rem;
-    border: 1px solid var(--secondary);
-    border-radius: 4px;
+    border: 2px solid var(--primary);
+    border-radius: 50%; 
+    background-color: var(--secondary); 
+    color: var(--text);
+    transition: border-color 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease; 
 }
 
-/* Puzzle Render */
+.puzzle-input:focus {
+    border-color: var(--accent); 
+    box-shadow: 0 0 8px var(--accent);
+    outline: none;
+    color: var(--text); 
+}
+
+.input-circle {
+    position: absolute;
+    width: 50px; 
+    height: 50px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
 .puzzle-render-visual {
     position: relative;
     width: 300px;
@@ -79,36 +80,38 @@ h1 {
     border: 2px solid var(--primary);
     border-radius: 8px;
     margin-top: 20px;
+    margin-bottom: 40px;
 }
 
-.circle {
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: var(--primary);
-    color: var(--text);
+
+.puzzle-buttons-container {
     display: flex;
+    flex-wrap: wrap; 
+    gap: 10px; 
     justify-content: center;
-    align-items: center;
-    font-size: 1rem;
-    font-weight: bold;
 }
+
 
 
 /* Solutions */
 .puzzle-results-section {
     margin-top: 20px;
+    text-align:center;
 }
 
 .puzzle-results-section h2 {
     font-size: 1.5rem;
     margin-bottom: 10px;
+    text-decoration: underline;
+
 }
 
 .puzzle-results-section ul {
     list-style-type: none;
     padding: 0;
+    margin: 0 auto;
+    display: inline-block;
+    text-align: center;
 }
 
 .puzzle-results-section li {
@@ -117,9 +120,23 @@ h1 {
 
 
 /* Alert Styles */
+
+.alert {
+    padding: 15px 20px;
+    border-radius: 5px;
+    font-size: 1rem;
+    color: var(--secondary); 
+    background-color: var(--primary);
+    margin: 0 auto;
+    display: inline-block;
+    text-align: center;
+}
+
+
 .alert-container {
     position: relative;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .alert-fade-in {
@@ -134,3 +151,31 @@ h1 {
 .alert-fade-out {
     opacity: 0;
 }
+
+
+
+
+/* Theme Button */
+.btn-theme-toggle {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none; 
+    border: none;
+    font-size: 1.5rem; 
+    cursor: pointer; 
+    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.btn-theme-toggle:hover,
+.btn-theme-toggle:focus {
+  transform: scale(1.2); 
+  background: none; 
+  border: none;
+  outline: none;
+}
+
+.btn-theme-toggle:active {
+    transform: scale(1);
+    background: none; 
+  }
