--- a/src/styles.css
+++ b/src/styles.css
@@ -36,7 +36,10 @@ body.dark {
 body { 
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
-
+h1, h2, h3, .btn-primary, .alert {
+    font-family: 'Roboto', sans-serif;
+    color: var(--primary)
+}
