--- a/src/components/LetterboxedSolverPage.css
+++ b/src/components/LetterboxedSolverPage.css
@@ -3,7 +3,7 @@
     padding: 20px;
     max-width: 1200px;
     margin: 0 auto;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px var(--shadow);
     border-radius: 8px;
 }
 
@@ -26,6 +26,18 @@ h1 {
     transition: background-color 0.3s ease, transform 0.2s ease;
     font-size: 1rem;
     font-weight: bold;
+    --bs-btn-active-bg: var(--primary);
+}
+
+.btn-secondary {
+    background-color: var(--background);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    font-size: 1rem;
+    --bs-btn-active-bg: var(--primary);
 }
 
 .btn-primary:hover {
@@ -34,6 +46,20 @@ h1 {
     color: var(--secondary);
 
     transform: scale(1.05);
+}
+
+.btn-primary:disabled {
+    background-color: var(--accent);
+    border-color: var(--accent) ;
+    color: var(--secondary) ;
+    opacity: 1;
+    cursor: not-allowed;
+}
+
+.btn-secondary:hover {
+    background-color: var(--accent);
+    border-color: var(--accent);
+    color: var(--secondary);
 }
 
 /* Puzzle Input */
@@ -154,28 +180,3 @@ h1 {
 
 
 
-
-/* Theme Button */
-.btn-theme-toggle {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none; 
-    border: none;
-    font-size: 1.5rem; 
-    cursor: pointer; 
-    transition: transform 0.3s ease, background-color 0.3s ease;
-}
-
-.btn-theme-toggle:hover,
-.btn-theme-toggle:focus {
-  transform: scale(1.2); 
-  background: none; 
-  border: none;
-  outline: none;
-}
-
-.btn-theme-toggle:active {
-    transform: scale(1);
-    background: none; 
-  }
